--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 fabric8-analytics.log
 infrastructure/testnet/tls*
 infrastructure/testnet/network/*/
+infrastructure/testnet/logs/*
+infrastructure/testnet/nohup.out
