Added README + minor fixes

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ infrastructure/testnet/tls*
 infrastructure/testnet/network/*/
 infrastructure/testnet/logs/*
 infrastructure/testnet/nohup.out
+infrastructure/testnet/alastria-node
