--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ infrastructure/testnet/network/*/
 infrastructure/testnet/logs/*
 infrastructure/testnet/nohup.out
 infrastructure/testnet/alastria-node
+infrastructure/testnet/eth-netstats
