Added docker support.
Now you can create Alastria validator or regular nodes and tune network options using make. For more info see README.md file

Removed directory `docker-env`

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
-fabric8-analytics.log
 infrastructure/testnet/tls*
 infrastructure/testnet/network/*/
 infrastructure/testnet/logs/*
 infrastructure/testnet/nohup.out
 infrastructure/testnet/alastria-node
 infrastructure/testnet/eth-netstats
+
+.vagrant/
+build
+.DS_Store
+*.log
