--- a/infrastructure/docker/Dockerfile.base
+++ b/infrastructure/docker/Dockerfile.base
@@ -31,7 +31,9 @@ RUN apt-get update && apt-get install -y \
 COPY ./scripts/install-dependencies.sh /opt
 
 # Install all dependencies
-RUN /opt/install-dependencies.sh $http_proxy && rm -rf /opt/install-dependencies.sh
+RUN chmod +x /opt/install-dependencies.sh && \
+    /opt/install-dependencies.sh $http_proxy && \
+    rm -rf /opt/install-dependencies.sh
 
 # Change working directory
 WORKDIR /opt
