Fixed minor fixes to faulty nodes

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ infrastructure/testnet/logs/*
 infrastructure/testnet/nohup.out
 infrastructure/testnet/alastria-node
 infrastructure/testnet/eth-netstats
+infrastructure/testnet/geth_faulty
 
 .vagrant/
 build
