--- a/infrastructure/threenodes/ansible/eth_netstats.yml
+++ b/infrastructure/threenodes/ansible/eth_netstats.yml
@@ -20,7 +20,7 @@
 
 - name: Install grunt
   npm:
-    name: {{ item }}
+    name: '{{ item }}'
     global: yes
     state: present
   with_items:
@@ -32,9 +32,8 @@
   args:
     chdir: '{{ project_path }}/eth-netstats'
 
-# TODO Launch with logs
 - name: Start
-  command: forever start server.js
+  command: forever start server.js >> {{ project_path }}/logs/netstat_{{ lookup('pipe','date +%Y-%m-%d-%H-%M-%S') }}.log &
   args:
     chdir: '{{ project_path }}/eth-netstats'
   environment:
