Using node variable to set nodes using Ansible

--- a/infrastructure/threenodes/ansible/cakeshop.yml
+++ b/infrastructure/threenodes/ansible/cakeshop.yml
@@ -8,6 +8,6 @@
 - name: Start Cakeshop
   command: |
     java -jar ~/alastria/cakeshop/cakeshop.war \
-      2>> ~/alastria/logs/cakeshop_"${_TIME}".log &
+      2>> ~/alastria/logs/cakeshop_{{ logdatetime }}.log &
   args:
     chdir: '{{ project_path }}/../cakeshop'
