--- a/infrastructure/threenodes/ansible/nodes.yml
+++ b/infrastructure/threenodes/ansible/nodes.yml
@@ -1,31 +1,34 @@
 ---
 
-# Validators
   - name: Geth
     command: |
-      nohup env geth --datadir "{{ project_path }}/{{ node_name }}" \
-        $GLOBAL_ARGS --mine --minerthreads 1 --syncmode "full" \
-        2>> "{{ project_path }}/logs/quorum_{{ node_name }}_"{{ lookup('pipe','date +%Y-%m-%d-%H-%M-%S') }}".log &
+      nohup env geth --datadir "{{ project_path }}/{{ item.name }}" \
+        "{{ global_args }}" --mine --minerthreads 1 --syncmode "full" \
+        2>> "{{ project_path }}/logs/quorum_{{ item.name }}_{{ logdatetime }}".log &
+    with_items: '{{ nodes }}'
 
-# General
   - name: Generate configuration
     template:
       src: config.jinja
-      dest: '{{ project_path }}/{{ node_name }}/constellation/constellation.conf'
+      dest: '{{ project_path }}/{{ item.node }}/constellation/constellation.conf'
+    with_items: '{{ nodes }}'
 
   - name: Constellation node
     command: |
-      nohup constellation-node "{{ project_path }}/{{ node_name }}/constellation/constellation.conf" \
-        2>> "{{ project_path }}/logs/constellation_{{ node_name }}_{{ lookup('pipe','date +%Y-%m-%d-%H-%M-%S') }}".log &
+      nohup constellation-node "{{ project_path }}/{{ item.name }}/constellation/constellation.conf" \
+        2>> "{{ project_path }}/logs/constellation_{{ item.name }}_{{ logdatetime }}".log &
+    with_items: '{{ nodes }}'
 
   - name: Check port
-    command: netcat -z -v localhost {{ item }}
-    with_items: '{{ node_ports }}'
+    command: netcat -z -v localhost {{ item.port }}
+    with_items: '{{ nodes }}'
 
   - name: Geth
     command: |
-      nohup env geth --datadir "${PWD}/{{ node_name }}" \
-        --debug $GLOBAL_ARGS 2>> \
-        "${PWD}"/logs/quorum_"{{ node_name }}"_"{{ lookup('pipe','date +%Y-%m-%d-%H-%M-%S') }}".log &
+      nohup env geth --datadir "{{ project_path }}/{{ item.name }}" \
+        --debug {{ global_args }} 2>> \
+        "{{ project_path }}/logs/quorum_{{ item.name }}_{{ logdatetime }}".log &
     environment:
-      PRIVATE_CONFIG: "${PWD}"/"{{ node_name }}"/constellation/constellation.conf
+      PRIVATE_CONFIG: "{{ project_path }}/{{ item.name }}/constellation/constellation.conf"
+    with_items:
+      - "{{ nodes }}"
