--- a/infrastructure/threenodes/ansible/bootstrap.yml
+++ b/infrastructure/threenodes/ansible/bootstrap.yml
@@ -2,9 +2,9 @@
 
 - name: Clone and update alastria-node repo
   git:
-    repo: '{{ alastria_node_repo }}'  # https://github.com/cubedro/eth-netstats
+    repo: '{{ alastria_node_repo }}'
     dest: '{{ project_path }}'
-    version: 'develop'  # master
+    version: '{{ alastria_node_version }}'
     force: yes
     accept_hostkey: yes
 
