--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Install Ansible
-      run: sudo apt-get install ansible
+      run: apt-get install ansible
 
     - name: Install Ansible Galaxy
       run: ansible-galaxy install fubarhouse.golang
