--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,4 @@ jobs:
       run: ansible-galaxy install fubarhouse.golang
 
     - name: Run Ansible test
-      run: ansible-playbook -i test.yml
+      run: ansible-playbook test.yml
