--- a/infrastructure/ansible/test.yml
+++ b/infrastructure/ansible/test.yml
@@ -9,17 +9,17 @@
     - defaults/test.yml
 
   tasks:
-    - import_tasks: install.yml
-      tags:
-        - install
+    # - import_tasks: install.yml
+    #   tags:
+    #     - install
 
-    - import_tasks: bootstrap.yml
-      tags:
-        - bootstrap
+    # - import_tasks: bootstrap.yml
+    #   tags:
+    #     - bootstrap
 
-    - import_tasks: eth_netstats.yml
-      tags:
-        - netstats
+    # - import_tasks: eth_netstats.yml
+    #   tags:
+    #     - netstats
 
     # TODO Left out for now
     # - import_tasks: nodes.yml
