Ensure bashrc exists

--- a/infrastructure/ansible/install.yml
+++ b/infrastructure/ansible/install.yml
@@ -1,5 +1,8 @@
 ---
 
+- name: Ensure bashrc exists
+  file: path='~/.bashrc' state=touch
+
 - name: Ensure GOROOT set
   lineinfile:
     path: '~/.bashrc'
