Fix bashrc problem on gh actions

--- a/infrastructure/ansible/install.yml
+++ b/infrastructure/ansible/install.yml
@@ -1,7 +1,11 @@
 ---
 
 - name: Ensure bashrc exists
-  file: path='~/.bashrc' state=touch
+  file:
+    path: '~/.bashrc'
+    state: touch
+    modification_time: preserve
+    access_time: preserve
 
 - name: Ensure GOROOT set
   lineinfile:
