--- a/infrastructure/ansible/test.yml
+++ b/infrastructure/ansible/test.yml
@@ -9,21 +9,21 @@
     - defaults/test.yml
 
   tasks:
-    - import_tasks: install.yml
-      tags:
-        - install
+    # - import_tasks: install.yml
+    #   tags:
+    #     - install
 
-    - import_tasks: bootstrap.yml
-      tags:
-        - bootstrap
+    # - import_tasks: bootstrap.yml
+    #   tags:
+    #     - bootstrap
 
-    - import_tasks: eth_netstats.yml
-      tags:
-        - netstats
+    # - import_tasks: eth_netstats.yml
+    #   tags:
+    #     - netstats
 
-    - import_tasks: etherbase.yml
-      tags:
-        - etherbase
+    # - import_tasks: etherbase.yml
+    #   tags:
+    #     - etherbase
 
     # TODO Left out for now
     # - import_tasks: nodes.yml
