--- a/infrastructure/ansible/deploy.yml
+++ b/infrastructure/ansible/deploy.yml
@@ -30,6 +30,6 @@
       tags:
         - nodes
 
-    - import_tasks: cakeshop.yml
-      tags:
-        - cakeshop
+    #- import_tasks: cakeshop.yml
+    #  tags:
+    #    - cakeshop
