[WIP] Dockerfile changes to create nodes on test

--- a/infrastructure/testnet/Dockerfile
+++ b/infrastructure/testnet/Dockerfile
@@ -1,28 +1,31 @@
-FROM ubuntu:16.04
+FROM ubuntu:18.04
 
-LABEL maintainer "Alfonso de la Rocha (https://github.com/arochaga)"
+LABEL maintainer "Carlos Morales Diego (https://github.com/cmoralesdiego)"
 
 # Install dependencies
 RUN apt-get update && apt-get install -y \
     git \
+    curl \
     make \
     wget \
     sudo \
     netcat\
-    nodejs \
-    npm \
     software-properties-common \
     unzip \
     gcc \
     libsodium-dev \
     build-essential \
+    npm \
     libdb-dev \
     zlib1g-dev \
     libtinfo-dev \
     sysvbanner \
     psmisc \
     libleveldb-dev
-RUN ln -s /usr/bin/nodejs /usr/bin/node
+RUN curl -sL https://deb.nodesource.com/setup_10.x -o nodesource_setup.sh
+RUN sudo bash nodesource_setup.sh
+RUN sudo cp /usr/lib/x86_64-linux-gnu/libsodium.so.23.1.0 /usr/lib/x86_64-linux-gnu/libsodium.so.18
+# RUN ln -s /usr/bin/nodejs /usr/bin/node
 # Copy installation script
 COPY . /opt
 
@@ -30,11 +33,11 @@ COPY . /opt
 WORKDIR /opt
 
 # Install all dependencies
-RUN ./bin/bootstrap.sh
+RUN ./bin/bootstrap-alastria-node.sh
 # Start ethstats
 RUN ./bin/start_ethstats.sh
 # Build geth for faulty_nodes
-RUN ./bin/build_faulty_nodes.sh
+# RUN ./bin/build_faulty_nodes.sh
 
 # Monitoring
 EXPOSE 8443/tcp
