Remove cakeshop from test

--- a/infrastructure/ansible/test.yml
+++ b/infrastructure/ansible/test.yml
@@ -21,15 +21,15 @@
     #   tags:
     #     - netstats
 
-    # - import_tasks: etherbase.yml
-    #   tags:
-    #     - etherbase
+     - import_tasks: etherbase.yml
+       tags:
+         - etherbase
 
     # TODO Left out for now
     # - import_tasks: nodes.yml
     #   tags:
     #     - nodes
 
-    - import_tasks: cakeshop.yml
-      tags:
-        - cakeshop
+    #- import_tasks: cakeshop.yml
+    #  tags:
+    #    - cakeshop
