--- a/infrastructure/testnet/vagrant-testnet/Vagrantfile
+++ b/infrastructure/testnet/vagrant-testnet/Vagrantfile
@@ -106,7 +106,7 @@ Vagrant.configure(2) do |config|
 
   # provisioners
   # !! You have to comment this two lines if you use your own box !!
-  config.vm.provision 'shell', path: 'vagrant/config/provision/once-as-root.sh', args: [options['timezone'], options['commit']]
+  config.vm.provision 'shell', path: 'vagrant/config/provision/once-as-root.sh', args: [options['timezone'], options['commit'], options['ubuntu']]
   config.vm.provision 'shell', path: 'vagrant/config/provision/once-as-vagrant.sh', privileged: false
   # Always need this last script to work 
   config.vm.provision 'shell', path: 'vagrant/config/provision/always-as-root.sh', run: 'always'
