--- a/infrastructure/testnet/vagrant-testnet/vagrant/config/vconfig/vagrant-local.example.yml
+++ b/infrastructure/testnet/vagrant-testnet/vagrant/config/vconfig/vagrant-local.example.yml
@@ -43,6 +43,11 @@ memory: 6144
 # Define which test-environment commit to use. Recommended last documented "stable one"
 commit: "DEFINE_A_COMMIT"
 
+# Define the number of validator, general and faulty nodes of the test network. Defaults are already set.
+validator: 2
+general: 3
+faulty: 0
+
 # Ubuntu version. Uncomment the line containing the version you want to use.
 ubuntu: "bento/ubuntu-20.04" #For Ubuntu 20.04 LTS
 # ubuntu: "bento/ubuntu-18.04" #For Ubuntu 18.04 LTS
