Changed line endings so bash scripts do not break at execution time

--- a/infrastructure/testnet/vagrant-testnet/vagrant/config/vconfig/vagrant-local.example.yml
+++ b/infrastructure/testnet/vagrant-testnet/vagrant/config/vconfig/vagrant-local.example.yml
@@ -27,7 +27,7 @@ block_explorer: 8888
 block_explorer_api: 8080
 
 # Project folder
-projectfolder: "."
+projectfolder: "../../../"
 
 # Domain name
 domain: testnet
